fixed top-bar links&hover effect, side-nav links are now stretched on full size of parent element

--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -102,6 +102,7 @@ body{
     }
 
     img{
+      object-fit: cover;
       position: relative;
       border-radius: 50%;
       height: 45px;
@@ -129,6 +130,11 @@ body{
   }
 }
 
+.list-link{
+  display: block;
+  padding-left: 15px;
+}
+
 .list {
   //margin: 5%;
   //padding: 5%;
@@ -137,7 +143,6 @@ body{
   width: 100%;
 
   li{
-    padding-left: 15px;
     height: 40px;
     vertical-align: middle;
     line-height: 40px;
@@ -198,12 +203,16 @@ body{
 }
 
 .top-navbar a {
+  display: block;
   float: left;
   color: #f2f2f2;
   text-align: center;
   padding: 17px 16px;
   text-decoration: none;
   font-size: 17px;
+  &:hover{
+    background-color: lightgray;
+  }
 }
 
 .inner-wrapper{
